@@ -30,6 +30,7 @@
 	<div class="subtitle">[%- subtitle -%]
 	[% IF edition -%]<div class="edition">[%- edition -%]</div>[%- END %]
 	</div>
+	[%- IF contributors.author %]
 	<div class="authors">
 	[%- FOREACH contributor = contributors.author %]
 		<div class="contributor">
@@ -53,6 +54,7 @@
 		</div>
 	[%- END %]
 	</div>
+	[%- END %]
 	[%- IF contributors.editor %]
 	<div class="editors">
 		<h1>[%- editorlabel -%]</h1>
